--- a/Admin/Tpl/AdminPwd/index.html
+++ b/Admin/Tpl/AdminPwd/index.html
@@ -39,7 +39,7 @@
         </tr>
         <tr>
           
-          <td>确认密码：<input name="comfirm_password" type="password" size="25" class="inputBg" id="pwd2">　<span id="reg_pwd2" ></span></td>
+          <td>确认密码：<input name="confirm" type="password" size="25" class="inputBg" id="pwd2">　<span id="reg_pwd2" ></span></td>
         </tr>
         <tr>
           <td colspan="2" height="40"><input name="act" type="hidden" value="act_edit_password">
