--- a/Home/Tpl/Public/top1.html
+++ b/Home/Tpl/Public/top1.html
@@ -4,7 +4,7 @@
     <div class="login-info"> <font>欢迎光临！&nbsp;&nbsp;</font> </div>
     <div class="quick-menu">
       <ul>
-        <li><a title="帮助中心" href="#">帮助中心</a> </li>
+        <li><a title="帮助中心" href="__PUBLIC__/help.htm" target="_blank">帮助中心</a> </li>
         <li><a href="__APP__/Reg/reg">[免费注册]</a></li>
       </ul>
     </div>
