--- a/Home/Tpl/Public/top2.html
+++ b/Home/Tpl/Public/top2.html
@@ -5,7 +5,7 @@
     <div class="quick-menu2">
       <ul>
         <li><a title="我的帐户" href="__APP__/Order/query">我的帐户</a> </li>
-        <li><a title="帮助中心" href="#">帮助中心</a> </li>
+        <li><a title="帮助中心" href="__PUBLIC__/help.htm" target="_blank">帮助中心</a> </li>
         <li>欢迎你，<font style="color:#B10A04;"><{$username}></font></li>
         <li><a href="__APP__/Public/logout">退出</a></li>
       </ul>
