--- a/Home/Tpl/Public/footer.html
+++ b/Home/Tpl/Public/footer.html
@@ -5,31 +5,31 @@
 
 <div class="help_mod">
 <div class="help_mod_t">购物指南</div>
-<div class="help_mod_c"><a rel="nofollow" href="####h1" target="_blank">怎样购物</a></div>
-<div class="help_mod_c"><a rel="nofollow" href="####h2" target="_blank">积分政策</a></div>
-<div class="help_mod_c"><a rel="nofollow" href="####h3" target="_blank">会员优惠</a></div>
-<div class="help_mod_c"><a rel="nofollow" href="####h4" target="_blank">VIP企业用户</a></div>
-<div class="help_mod_c"><a rel="nofollow" href="####h5" target="_blank">订单状态解释</a></div>
+<div class="help_mod_c"><a rel="nofollow"  href="__PUBLIC__/help.htm" target="_blank">怎样购物</a></div>
+<div class="help_mod_c"><a rel="nofollow"  href="__PUBLIC__/help.htm" target="_blank">积分政策</a></div>
+<div class="help_mod_c"><a rel="nofollow"  href="__PUBLIC__/help.htm" target="_blank">会员优惠</a></div>
+<div class="help_mod_c"><a rel="nofollow"  href="__PUBLIC__/help.htm" target="_blank">VIP企业用户</a></div>
+<div class="help_mod_c"><a rel="nofollow"  href="__PUBLIC__/help.htm" target="_blank">订单状态解释</a></div>
 </div>
 <div class="help_mod">
 <div class="help_mod_t">配送方式</div>
-<div class="help_mod_c"><a rel="nofollow" href="###h1" target="_blank">快递资费及送达时间</a></div>
-<div class="help_mod_c"><a rel="nofollow" href="###h2" target="_blank">快递覆盖地区查询</a></div>
-<div class="help_mod_c"><a rel="nofollow" href="###h3" target="_blank">验货与签收</a></div>
+<div class="help_mod_c"><a rel="nofollow"  href="__PUBLIC__/help.htm" target="_blank">快递资费及送达时间</a></div>
+<div class="help_mod_c"><a rel="nofollow"  href="__PUBLIC__/help.htm" target="_blank">快递覆盖地区查询</a></div>
+<div class="help_mod_c"><a rel="nofollow"  href="__PUBLIC__/help.htm" target="_blank">验货与签收</a></div>
 </div>
 <div class="help_mod">
 <div class="help_mod_t">支付方式</div>
-<div class="help_mod_c"><a rel="nofollow" href="####h4" target="_blank">货到付款</a></div>
-<div class="help_mod_c"><a rel="nofollow" href="####h1" target="_blank">支付宝</a></div>
-<div class="help_mod_c"><a rel="nofollow" href="####h2" target="_blank">财付通</a></div>
-<div class="help_mod_c"><a rel="nofollow" href="####h5" target="_blank">银行转账</a></div>
-<div class="help_mod_c"><a rel="nofollow" href="####h3" target="_blank">网银在线</a></div>
+<div class="help_mod_c"><a rel="nofollow"  href="__PUBLIC__/help.htm" target="_blank">货到付款</a></div>
+<div class="help_mod_c"><a rel="nofollow"  href="__PUBLIC__/help.htm" target="_blank">支付宝</a></div>
+<div class="help_mod_c"><a rel="nofollow"  href="__PUBLIC__/help.htm" target="_blank">财付通</a></div>
+<div class="help_mod_c"><a rel="nofollow"  href="__PUBLIC__/help.htm" target="_blank">银行转账</a></div>
+<div class="help_mod_c"><a rel="nofollow"  href="__PUBLIC__/help.htm" target="_blank">网银在线</a></div>
 </div>
 <div class="help_mod">
 <div class="help_mod_t">售后服务</div>
-<div class="help_mod_c"><a rel="nofollow" href="###h1" target="_blank">退换货原则</a></div>
-<div class="help_mod_c"><a rel="nofollow" href="###h2" target="_blank">换货流程</a></div>
-<div class="help_mod_c"><a rel="nofollow" href="###h3" target="_blank">退货流程</a></div>
+<div class="help_mod_c"><a rel="nofollow"  href="__PUBLIC__/help.htm" target="_blank">退换货原则</a></div>
+<div class="help_mod_c"><a rel="nofollow"  href="__PUBLIC__/help.htm" target="_blank">换货流程</a></div>
+<div class="help_mod_c"><a rel="nofollow"  href="__PUBLIC__/help.htm" target="_blank">退货流程</a></div>
 </div>
 <div class="help_mod">
 <div class="help_mod_t">关于浮生若茶</div>
